@@ -83,6 +83,10 @@ filename.scanner.skip.keywords=LIMITED,DiAMOND,AXXO,PUKKA,iDHD,PROPER,REPACK,DSR
 # Example library path = "D:\Videos\" then this will search in "D:\Videos\NFO\"
 filename.nfo.directory=NFO
 
+# When enabled, all parent directories up to the library root are searched for NFO files
+# All found nfo files are merged. Values in nfo files in deeper directories override values from directories above. 
+filename.nfo.parentDirs=false
+
 # Check to see if the NFO file has changed and force a re-scan of the movie if it is.
 filename.nfo.checknewer=true
 
